branch new observer not rely on Proxy object

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
 
 
         <script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>
-        <script type="text/javascript" src="./src/js/observable-object.js"></script>
-        <script type="text/javascript" src="./src/js/jquery.viewmodel.js"></script>
+        <!--<script type="text/javascript" src="./src/js/observable-object.js"></script>
+        <script type="text/javascript" src="./src/js/jquery.viewmodel.js"></script>-->
+        <script type="text/javascript" src="./src/js/utils.js"></script>
+        <script type="text/javascript" src="./src/js/auditor.js"></script>
         <script type="text/javascript" src="./src/js/script.js"></script>
     </body>
 </html>
