--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
         </div>
 
         <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+        <!--<script type="text/javascript" src="../build/auditor.js"></script>-->
         <script type="text/javascript" src="../dist/minimal-binding.min.js"></script>
 
         <script type="text/javascript" src="/test/app/script.js"></script>
