add sizzle for experiment

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
 
         <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
         <!--<script type="text/javascript" src="../build/auditor.js"></script>-->
-        <script type="text/javascript" src="../dist/minimal-binding.min.js"></script>
+        <script type="text/javascript" src="../dist/minimal-binding.js"></script>
 
         <script type="text/javascript" src="/test/app/script.js"></script>
     </body>
